# Rust-Keycloak

./: .env  Cargo.toml  Dockerfile  Dockerfile multi-stage  docker-compose.yaml  output.json
.sqlx/: query-0391c8d1e51279817a31255da1b0a58ab704754d5938f36a892ed36143d6fa06.json  query-1d88a0961626b0ffc996ceac46a4d4dee07f3b41cc048d8d9cbf7f943406b039.json  query-4185a3d57aa8f2b1f81cb3ee09b036c13daac340422f47f4f8ec6756d0670b10.json  query-4854a1154c3ba74d46b84d2ff78f6cbf52aba72ac296a8937d86058205b73d11.json  query-7106b79720b08731e94655d9d095dcc2e937d14c00921ece32b690dc237d5f6e.json  query-8469792bd25d902d0508337a071a9c6a7baa3897e2f8fba279233cefdb2514e3.json  query-ccc1929565f3178ea27d2cea9b18350d34a2e33fba89a0639c3555a491845e7d.json  query-f0820dbaef4dddee75ac5d59b5bf478b636eb946fab338d63622d4bccee3d578.json  query-fa1692a517bdeaddd47bde388154c3671f634a0a1cee88d62a72b006a22b1c08.json
misc/: MOCK_DATA.csv  MOCK_DATA_REALM_100.csv  MOCK_DATA_REALM_1000.csv  Rust_User.csv  Rust_User_3.csv  input.json
src/: handler.rs  json_manager.rs  keycloak.rs  main.rs
src/api/: handler.rs  route.rs
src/api/note/: note_handler.rs  note_route.rs
src/api/realm/: realm_handler.rs  realm_model.rs  realm_router.rs  realm_schema.rs
src/api/socket/: socket_model.rs
src/api/user/: user_handler.rs  user_model.rs  user_router.rs  user_schema.rs
src/csv/: csv_handler.rs  csv_manager.rs  csv_router.rs
src/logic/fibonacci/: fibonacci_handler.rs  fibonacci_router.rs  fibonacci_seq.rs
src/logic/prime/: prime_handler.rs  prime_router.rs  prime_seq.rs
src/tools/crypto/: crypto_handler.rs  crypto_logic.rs  crypto_router.rs
src/tools/csv/: csv_handler.rs  csv_manager.rs  csv_router.rs
src/tools/json/: json.rs
src/tools/jwt/: jwt_handler.rs  jwt_router.rs  jwt_sign_verify.rs
