[package]
name = "my-keycloak"
version = "0.1.0"
authors = ["Ramyy"]

edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keycloak = "21.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"

reqwest = { version = "0.11", features = ["json"] }
