[package]
name = "my-keycloak"
version = "0.1.0"
authors = ["Ramyy"]

edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keycloak = "21.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"

reqwest = { version = "0.11", features = ["json"] }
mysql = "24.0.0"


axum = "0.7.2"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid" , "macros"] }
# sqlx-adapter = { version = "1.2.0", default-features = false, features = ["mysql", "runtime-tokio-native-tls"]}

tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
csv = "1.3.0"
jsonwebtoken = "9.2.0"
